--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,19 @@ name = "newsletter"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "newsletter"
 
 [dependencies]
+actix-web = "4.3.1"
+serde = { version = "1.0.183", features = ["derive"] }
+tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+
+[dev-dependencies]
+reqwest = "0.11.18"
+serde_urlencoded = "0.7.1"
+url = "2.4.0"
