--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,25 @@ name = "newsletter"
 
 [dependencies]
 actix-web = "4.3.1"
+config = "0.13.3"
 serde = { version = "1.0.183", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+    # Use the tokio runtime and rustls as TLS backend.
+    "runtime-tokio-rustls",
+    # access to sqlx::query! and sqlx::query_as!
+    "macros",
+    "postgres",
+    # maps SQL UUIDs to Uuid type.
+    "uuid",
+    # Maps timestamptz to dateTime<t>
+    "chrono",
+    "migrate",
+]
 
 [dev-dependencies]
 reqwest = "0.11.18"
