--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ name = "newsletter"
 
 [dependencies]
 actix-web = "4.3.1"
+chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
 serde = { version = "1.0.183", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.4.1", features = ["v4"] }
 
 [dependencies.sqlx]
 version = "0.6"
