--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,11 @@ name = "newsletter"
 actix-web = "4.3.1"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
+env_logger = "0.10.0"
+log = "0.4.20"
 serde = { version = "1.0.183", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.37", features = ["log"] }
 uuid = { version = "1.4.1", features = ["v4"] }
 
 [dependencies.sqlx]
