--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -7,3 +7,5 @@ format_code_in_doc_comments = true
 format_strings = true
 normalize_comments = true
 group_imports = "StdExternalCrate"
+normalize_doc_attributes = true
+reorder_impl_items = true
