--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,14 @@ chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
 env_logger = "0.10.0"
 log = "0.4.20"
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.183", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.37", features = ["log"] }
+tracing-actix-web = "0.7.6"
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 uuid = { version = "1.4.1", features = ["v4"] }
 
 [dependencies.sqlx]
@@ -38,6 +43,7 @@ features = [
 ]
 
 [dev-dependencies]
+once_cell = "1.18.0"
 reqwest = "0.11.18"
 serde_urlencoded = "0.7.1"
 url = "2.4.0"
