--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,9 @@ jobs:
 
       - name: Migrate database
         run: SKIP_DOCKER=true ./scripts/init_db.sh
-
+      - name: Check sqlx-prepare output is up-to-date
+        run: |
+          cargo sqlx prepare --check -- --bin newsletter
       - name: Run tests
         run: cargo test
 
