--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,24 +23,16 @@ tracing = { version = "0.1.37", features = ["log"] }
 tracing-actix-web = "0.7.6"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.1.3"
-tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
+tracing-subscriber = { version = "0.3.17", features = [
+    "registry",
+    "env-filter",
+] }
 uuid = { version = "1.4.1", features = ["v4"] }
 
 [dependencies.sqlx]
-version = "0.6"
+version = "0.7.1"
 default-features = false
-features = [
-    # Use the tokio runtime and rustls as TLS backend.
-    "runtime-tokio-rustls",
-    # access to sqlx::query! and sqlx::query_as!
-    "macros",
-    "postgres",
-    # maps SQL UUIDs to Uuid type.
-    "uuid",
-    # Maps timestamptz to dateTime<t>
-    "chrono",
-    "migrate",
-]
+features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
 
 [dev-dependencies]
 once_cell = "1.18.0"
