--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,21 @@ chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
 env_logger = "0.10.0"
 log = "0.4.20"
+reqwest = { version = "0.11.18", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.183", features = ["derive"] }
 serde-aux = "4.2.0"
+sqlx = { version = "0.7.1", default_features = false, features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-actix-web = "0.7.6"
@@ -41,15 +53,19 @@ tracing-subscriber = { version = "0.3.17", features = [
     "registry",
     "env-filter",
 ] }
+unicode-segmentation = "1.10.1"
 uuid = { version = "1.4.1", features = ["v4"] }
-
-[dependencies.sqlx]
-version = "0.7.1"
-default-features = false
-features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
+validator = "0.16.1"
 
 [dev-dependencies]
+claym = "0.5.1"
+fake = "2.8.0"
 once_cell = "1.18.0"
-reqwest = "0.11.18"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.0.0"
+rand = "0.8.5"
+serde_json = "1.0.107"
 serde_urlencoded = "0.7.1"
+tokio = { version = "1.32.0", features = ["macros", "rt"] }
 url = "2.4.0"
+wiremock = "0.5.19"
