--- a/fly.toml
+++ b/fly.toml
@@ -32,3 +32,4 @@ APP_DATABASE__DATABASE_NAME = "hidden_water_4767"
 APP_DATABASE__HOST = "weathered-night-4108.flycast"
 APP_DATABASE__PORT = "5432"
 APP_DATABASE__USERNAME = "hidden_water_4767"
+APP_APPLICATION__BASE_URL = "https://hidden-water-4767.fly.dev"
