--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -9,3 +9,4 @@ normalize_doc_attributes = true
 reorder_impl_items = true
 unstable_features = true
 wrap_comments = true
+brace_style = "PreferSameLine"
