--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,21 +25,27 @@ panic = "abort"
 
 [dependencies]
 actix-web = "4.3.1"
+actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
 anyhow = "1.0.75"
 argon2 = {version = "0.5.2", features = ["std"] }
 base64 = "0.21.5"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
 env_logger = "0.10.0"
+hex = "0.4.3"
+hmac = {version = "0.12.1", features = ["std"] }
+htmlescape = "0.3.1"
 log = "0.4.20"
 rand = { version = "0.8.5", features = ["std_rng"] }
 reqwest = { version = "0.11.18", default-features = false, features = [
     "json",
     "rustls-tls",
+    "cookies"
 ] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.183", features = ["derive"] }
 serde-aux = "4.2.0"
+sha2 = "0.10.8"
 sqlx = { version = "0.7.1", default_features = false, features = [
     "chrono",
     "macros",
@@ -59,6 +65,7 @@ tracing-subscriber = { version = "0.3.17", features = [
     "registry",
 ] }
 unicode-segmentation = "1.10.1"
+urlencoding = "2.1.3"
 uuid = { version = "1.4.1", features = ["v4"] }
 validator = "0.16.1"
 
